Wire up buttons

--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
     <meta charset="UTF-8">
     <title>Rock Paper Scissors</title>
     <link rel="stylesheet" href="style.css">
-    <script src="javascript.js"></script>
   </head>
 
   <body>
-    <h1>Hello World!</h1>
+    <div id="buttons">
+      <button id="rock">Rock!</button>
+      <button id="paper">Paper!</button>
+      <button id="scissors">Scissors!</button>
+    </div>
+    <div id="results"></div>
+    <div id="total"></div>
+    <script src="javascript.js"></script>
   </body>
 </html>
