Add matchup and results to interface

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
       <button id="paper">Paper!</button>
       <button id="scissors">Scissors!</button>
     </div>
-    <div id="results"></div>
-    <div id="total"></div>
+    <div class="display" id="matchup"></div>
+    <div class="display" id="results"></div>
+    <div class="display" id="total"></div>
     <script src="javascript.js"></script>
   </body>
 </html>
